k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumagent-webhook
  labels:
    app: scrumagent-webhook
    component: webhook-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: scrumagent-webhook
